// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IstioComponentStatus renders error icon when core component is not found 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_fpln1nr"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f7aox2p kiali_f7f7cpt"
        >
          <ExclamationCircleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--severity--critical--default)",
          "borderColor": "var(--pf-t--global--icon--color--severity--critical--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not found
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders error icon when core component is not running 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_fpln1nr"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f7aox2p kiali_f7f7cpt"
        >
          <ExclamationCircleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--severity--critical--default)",
          "borderColor": "var(--pf-t--global--icon--color--severity--critical--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders minus icon when addon component is not ready 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-addon"
  >
    <SplitItem
      isFilled={true}
    >
      addon
    </SplitItem>
    <Label
      className="kiali_fpln1nr"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fpvem4w kiali_f15a1iio"
        >
          <InProgressIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--severity--none--default)",
          "borderColor": "var(--pf-t--global--icon--color--severity--none--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not ready
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders minus icon when core component is not ready 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-core"
  >
    <SplitItem
      isFilled={true}
    >
      core
    </SplitItem>
    <Label
      className="kiali_fpln1nr"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fpvem4w kiali_f15a1iio"
        >
          <InProgressIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--severity--none--default)",
          "borderColor": "var(--pf-t--global--icon--color--severity--none--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not ready
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders success icon when core component is running 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_fpln1nr"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f1k0q3ly kiali_fza77py"
        >
          <CheckCircleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--chart--color--green--300)",
          "borderColor": "var(--pf-t--chart--color--green--300)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders success icon when core component is running 2`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_fpln1nr"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f1k0q3ly kiali_fza77py"
        >
          <CheckCircleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--chart--color--green--300)",
          "borderColor": "var(--pf-t--chart--color--green--300)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders warning icon when core component is not found 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_fpln1nr"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f1hzj123 kiali_feaah3f"
        >
          <ExclamationTriangleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--severity--moderate--default)",
          "borderColor": "var(--pf-t--global--icon--color--severity--moderate--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not found
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders warning icon when core component is not running 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_fpln1nr"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_f1hzj123 kiali_feaah3f"
        >
          <ExclamationTriangleIcon />
        </Icon>
      }
      style={
        Object {
          "--pf-v6-c-label--m-outline--BorderColor": "var(--pf-t--global--icon--color--severity--moderate--default)",
          "borderColor": "var(--pf-t--global--icon--color--severity--moderate--default)",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
      variant="outline"
    >
      Not healthy
    </Label>
  </Split>
</Fragment>
`;
